/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * Reply to be sent by the Charges domain to the Metering Point domain once the command has been processed.
 */
syntax = "proto3";

option csharp_namespace = "GreenEnergyHub.Charges.Infrastructure.Integration.LinkDefaultCharges";

message LinkDefaultChargesContract {
  string correlation_id = 1;
  string process_id = 2; // Unique process id of the create metering point process.
  string command_id = 3;
}